Added skill screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,12 @@
     <string name="mens">Mens</string>
     <string name="womens">Womens</string>
     <string name="co_ed">Co-ed</string>
+
+    <string name="i_am_a">I am a</string>
+
+    <string name="beginner">Beginnner</string>
+
+    <string name="baller">Baller</string>
+
+    <string name="finish">Finish</string>
 </resources>
