--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="desired_league">Desired League</string>
     <string name="mens">Mens</string>
     <string name="womens">Womens</string>
-    <string name="co_ed">Co-ed</string>
+    <string name="coed">Co-ed</string>
 
     <string name="i_am_a">I am a</string>
 
