--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="baller">Baller</string>
 
     <string name="finish">Finish</string>
+
+    <string name="selected">Selected %1$s</string>
 </resources>
